[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/home 1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/ML_TT_Thunchan_Normal.TTF" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.776471, 0.878431, 1, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.776471, 0.878431, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=4]
size = 48
extra_spacing_top = -3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_top = -3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
extra_spacing_top = -3
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 60.0
margin_top = 62.9966
margin_right = 940.0
margin_bottom = 1143.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -99.9999
margin_bottom = -900.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="japamala" type="Button" parent="Button"]
margin_left = 300.0
margin_top = 1300.0
margin_right = 700.0
margin_bottom = 1420.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "P]ame "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Namaskaram" type="Button" parent="Button"]
margin_left = 300.0
margin_top = 1450.0
margin_right = 700.0
margin_bottom = 1570.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "\\akvImc§Ä"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prarthana" type="Button" parent="Button"]
margin_left = 300.0
margin_top = 1600.0
margin_right = 700.0
margin_bottom = 1720.0
custom_fonts/font = SubResource( 6 )
text = "kÔym {]mÀ°\\"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button/japamala" to="." method="_on_japamala_pressed"]
[connection signal="pressed" from="Button/Namaskaram" to="." method="_on_Namaskaram_pressed"]
[connection signal="pressed" from="Button/prarthana" to="." method="_on_prarthana_pressed"]
